feature/day03 : move day03 to day04 and update day03

--- a/pages/day03.html
+++ b/pages/day03.html
@@ -229,8 +229,12 @@
           <section class="content__section">
             <h3 class="content__subhead xlarge text-bold">Foreword</h3>
             <p class="content__para">
-              대박사건 대박사건! 오늘은 단 한문제로 끝납니다! 그리고 놀라운
-              CSS의 기능에 감탄하게 될 겁니다.
+              여러분... 아이유 콘서트 가 보셨나요? 세상에 이렇게 좋은 콘서트가
+              있을 수 없답니다. 하핫! 저 작은 체구에서 노래를 5시간을 연달아
+              부른다니까요? 진짜 경이로운데 노래가 아주 그냥 하나하나 주옥같아서
+              행복으로 가득한 하루를 보낼 수 있답니다. 이 글을 쓰고 있는 저도
+              특별한 생각 없이 갔던 콘서트가 준 몽실몽실한 기억 덕에 아이유 팬이
+              되었답니다 :)
             </p>
           </section>
 
@@ -238,7 +242,7 @@
 
           <section class="content__section">
             <h3 class="content__subhead xlarge text-bold">
-              Exercise 00 : FTube
+              Exercise 00 : The Chaotic Boxes 🤪
             </h3>
             <table class="content__table">
               <thead class="content__table--thead text-bold">
@@ -258,8 +262,105 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">index.html, css/*.css</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">div, span</td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>
+                겉만 보면 평범하지만 마우스를 올리면 재미있어지는 박스들을
+                만들어봅시다.
+              </li>
+              <li>다양한 animation을 적용해 영상과 같이 구현해보세요.</li>
+            </ul>
+            <iframe
+              class="content__video-horiz"
+              src="../assets/day03/ex00.mp4"
+            ></iframe>
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 01 : Flexible Ribbons
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th colspan="3">Exercise 01</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td colspan="3" class="content__table--td-name">
+                    Flexible Ribbons
+                  </td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex01/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">index.html, style.css</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">div</td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>
+                아래 영상과 같이 스크린 크기에 비례하게 ribbon의 너비 & 높이가
+                변하게 만드세요.
+              </li>
+              <li>다양한 animation을 적용해 영상과 같이 구현해보세요.</li>
+            </ul>
+            <iframe
+              class="content__video-horiz"
+              src="../assets/day03/ex01.mp4"
+            ></iframe>
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 02 : Responsiveness is Responsibility
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th colspan="3">Exercise 02</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td colspan="3" class="content__table--td-name">
+                    Responsiveness is Responsibility
+                  </td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex02/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    index.html, css/*.css, assets/(image files if necessary)
+                    index.html, css/*.css, css/color.css, assets/(image files if
+                    necessary)
                   </td>
                 </tr>
                 <tr class="content__table--tr">
@@ -270,110 +371,16 @@
               </tbody>
             </table>
             <ul class="content__list">
-              <li>FTube의 모바일 UI를 구현해봅시다.</li>
+              <li>지금까지는 모바일 규격의 UI만 만들었죠.</li>
               <li>
-                여러분의 휴대폰 viewport에 맞춰 사이즈를 설정하세요. (우리는
-                iPhone12에 맞추었답니다)
-              </li>
-              <li>영상의 썸네일과 제목을 따라할 필요는 없습니다.</li>
-              <li>
-                영상 제목이 3줄을 넘어가려하면 ... 으로 이후 내용이 생략됩니다.
-                (하지만 HTML 코드에선 원본 제목으로 되어 있습니다)/li>
-              </li>
-              <li>
-                헤더 우측 '<i class="material-icons">more_vert</i>' 을 누르면
-                5가지 링크가 나타납니다. 하지만 어디로도 향하지 않습니다.
-              </li>
-              <li>
-                영상 옆 '<i class="material-icons">more_vert</i>' 을 누르면 팝업
-                창이 열리고, Cancel을 누르면 닫힙니다.
-              </li>
-              <li>
-                All Videos 목록 아래의 '<i class="material-icons">expand_more</i
-                >' 모양 아이콘을 누르면 더 많은 영상이 나타납니다.
-              </li>
-              <li>
-                더 많은 영상이 나타나면 기존의 '<i class="material-icons"
-                  >expand_more</i
-                >' 모양 아이콘은 '<i class="material-icons">expand_less</i>' 로
-                변경됩니다.
-              </li>
-              <li>
-                Subscribe 옆 아이콘을 누르면 텍스트가 회색 Subscribed로
-                변경됩니다.
-              </li>
-              <li>
-                toggle 메뉴와 팝업을 위한 anchor와 checkbox에는 id를 사용해도
-                됩니다.
+                영상과 같이 창 너비가 800px을 넘어갈 때 경고하는 개구리가
+                나타나게 하세요.
               </li>
             </ul>
-            <p class="content__tip">
-              <i class="material-icons-outlined">lightbulb</i>CSS의 -webkit-,
-              -moz-, -ms-, -o- 같은 접두어는 무엇을 의미할까요?
-            </p>
-
-            <h3 class="content__subhead large text-bold">Screenshots</h3>
-            <div class="content__flex">
-              <img
-                class="content__flex--img"
-                src="../assets/day03/img1.png"
-                alt="ftube screenshots"
-              /><img
-                class="content__flex--img"
-                src="../assets/day03/img2.png"
-                alt="ftube screenshots"
-              /><img
-                class="content__flex--img"
-                src="../assets/day03/img3.png"
-                alt="ftube screenshots"
-              /><img
-                class="content__flex--img"
-                src="../assets/day03/img4.png"
-                alt="ftube screenshots"
-              /><img
-                class="content__flex--img"
-                src="../assets/day03/img5.png"
-                alt="ftube screenshots"
-              />
-            </div>
-
-            <h3 class="content__subhead large text-bold">기능별 예시 영상</h3>
-            <div class="content__flex">
-              <div class="flex--frame">
-                <iframe
-                  class="frame--video"
-                  src="../assets/day03/video1.mp4"
-                ></iframe>
-                <figcaption class="frame-caption small">
-                  밑에 화살표 누르면 영상 추가 로드
-                </figcaption>
-              </div>
-              <div class="flex--frame">
-                <iframe
-                  class="frame--video"
-                  src="../assets/day03/video2.mp4"
-                ></iframe>
-                <figcaption class="frame-caption small">
-                  아이콘 클릭시 Subscribe 문구가 바뀜
-                </figcaption>
-              </div>
-              <div class="flex--frame">
-                <iframe
-                  class="frame--video"
-                  src="../assets/day03/video3.mp4"
-                ></iframe>
-                <figcaption class="frame-caption small">
-                  헤더 우측 toggle 메뉴
-                </figcaption>
-              </div>
-              <div class="flex--frame">
-                <iframe
-                  class="frame--video"
-                  src="../assets/day03/video4.mp4"
-                ></iframe>
-                <figcaption class="frame-caption small">팝업</figcaption>
-              </div>
-            </div>
+            <iframe
+              class="content__video-horiz"
+              src="../assets/day03/ex02.mp4"
+            ></iframe>
           </section>
         </div>
       </main>
