--- a/pages/day04.html
+++ b/pages/day04.html
@@ -170,7 +170,212 @@
       </header>
 
       <main class="layout__content">
-        <div class="content__frame"></div>
+        <div class="content__frame">
+          <h2 class="content__head xxxlarge text-bold">DAY04</h2>
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">Basic Instruction</h3>
+            <ul class="content__list">
+              <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
+              <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
+              <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
+              <li>
+                제출하신 과제물은 동료들끼리 서로 확인하고 평가하게 됩니다.
+              </li>
+              <li>
+                Exercise는 난이도에 따라 쉬운 문제에서 어려운 문제 순으로 짜여
+                있습니다. 앞 단 계 문제의 과제물이 완벽하게 작동하지 않으면
+                난이도가 더 높은 문제는 아무리 잘 완료했다 하더라도 평가에
+                반영되지 않습니다.
+              </li>
+              <li>
+                모든 HTML 파일은
+                <a
+                  class="text-underline text-bold"
+                  href="https://validator.w3.org/"
+                  >W3 Validator</a
+                >
+                을 통과해야 합니다.
+              </li>
+              <li>
+                meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.
+              </li>
+              <li>
+                사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
+                부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
+                불가능합니다.
+              </li>
+              <li>어떠한 형태로든 JavaScript의 사용을 금지합니다.</li>
+              <li>페이지가 열리지 않으면 0점을 받게 됩니다.</li>
+              <li>
+                각 Exercise에서 정한 파일 이외의 어떠한 파일도 디렉토리에 남겨
+                두어서는 안 됩니다.
+              </li>
+              <li>
+                질문이 있으신가요? 오른쪽 동료에게 물어보세요. 아니면 왼쪽
+                동료에게 물어보세요.
+              </li>
+              <li>참고 가이드는 Google...그리고 Google 입니다.</li>
+              <li>
+                예시를 꼼꼼히 살펴보세요. Exercise에서 명시적으로 언급되지 않은
+                세부적인 사항에 대한 힌트를 얻을 수도 있습니다.
+              </li>
+              <li>다같이 한번 외쳐볼까요? "Chick to Chicken~"</li>
+            </ul>
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">Foreword</h3>
+            <p class="content__para">
+              대박사건 대박사건! 오늘은 단 한문제로 끝납니다! 그리고 놀라운
+              CSS의 기능에 감탄하게 될 겁니다.
+            </p>
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 00 : FTube
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th colspan="3">Exercise 00</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td colspan="3" class="content__table--td-name">FTube</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex00/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">
+                    index.html, css/*.css, assets/(image files if necessary)
+                  </td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">제한 없음</td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>FTube의 모바일 UI를 구현해봅시다.</li>
+              <li>
+                여러분의 휴대폰 viewport에 맞춰 사이즈를 설정하세요. (우리는
+                iPhone12에 맞추었답니다)
+              </li>
+              <li>영상의 썸네일과 제목을 따라할 필요는 없습니다.</li>
+              <li>
+                영상 제목이 3줄을 넘어가려하면 ... 으로 이후 내용이 생략됩니다.
+                (하지만 HTML 코드에선 원본 제목으로 되어 있습니다)/li>
+              </li>
+              <li>
+                헤더 우측 '<i class="material-icons">more_vert</i>' 을 누르면
+                5가지 링크가 나타납니다. 하지만 어디로도 향하지 않습니다.
+              </li>
+              <li>
+                영상 옆 '<i class="material-icons">more_vert</i>' 을 누르면 팝업
+                창이 열리고, Cancel을 누르면 닫힙니다.
+              </li>
+              <li>
+                All Videos 목록 아래의 '<i class="material-icons">expand_more</i
+                >' 모양 아이콘을 누르면 더 많은 영상이 나타납니다.
+              </li>
+              <li>
+                더 많은 영상이 나타나면 기존의 '<i class="material-icons"
+                  >expand_more</i
+                >' 모양 아이콘은 '<i class="material-icons">expand_less</i>' 로
+                변경됩니다.
+              </li>
+              <li>
+                Subscribe 옆 아이콘을 누르면 텍스트가 회색 Subscribed로
+                변경됩니다.
+              </li>
+              <li>
+                toggle 메뉴와 팝업을 위한 anchor와 checkbox에는 id를 사용해도
+                됩니다.
+              </li>
+            </ul>
+            <p class="content__tip">
+              <i class="material-icons-outlined">lightbulb</i>CSS의 -webkit-,
+              -moz-, -ms-, -o- 같은 접두어는 무엇을 의미할까요?
+            </p>
+
+            <h3 class="content__subhead large text-bold">Screenshots</h3>
+            <div class="content__flex">
+              <img
+                class="content__flex--img"
+                src="../assets/day04/img1.png"
+                alt="ftube screenshots"
+              /><img
+                class="content__flex--img"
+                src="../assets/day04/img2.png"
+                alt="ftube screenshots"
+              /><img
+                class="content__flex--img"
+                src="../assets/day04/img3.png"
+                alt="ftube screenshots"
+              /><img
+                class="content__flex--img"
+                src="../assets/day04/img4.png"
+                alt="ftube screenshots"
+              /><img
+                class="content__flex--img"
+                src="../assets/day04/img5.png"
+                alt="ftube screenshots"
+              />
+            </div>
+
+            <h3 class="content__subhead large text-bold">기능별 예시 영상</h3>
+            <div class="content__flex">
+              <div class="flex--frame">
+                <iframe
+                  class="frame--video"
+                  src="../assets/day04/video1.mp4"
+                ></iframe>
+                <figcaption class="frame-caption small">
+                  밑에 화살표 누르면 영상 추가 로드
+                </figcaption>
+              </div>
+              <div class="flex--frame">
+                <iframe
+                  class="frame--video"
+                  src="../assets/day04/video2.mp4"
+                ></iframe>
+                <figcaption class="frame-caption small">
+                  아이콘 클릭시 Subscribe 문구가 바뀜
+                </figcaption>
+              </div>
+              <div class="flex--frame">
+                <iframe
+                  class="frame--video"
+                  src="../assets/day04/video3.mp4"
+                ></iframe>
+                <figcaption class="frame-caption small">
+                  헤더 우측 toggle 메뉴
+                </figcaption>
+              </div>
+              <div class="flex--frame">
+                <iframe
+                  class="frame--video"
+                  src="../assets/day04/video4.mp4"
+                ></iframe>
+                <figcaption class="frame-caption small">팝업</figcaption>
+              </div>
+            </div>
+          </section>
+        </div>
       </main>
 
       <footer class="layout__footer">
